#------------------------------------------------------------------------------------------
# Include directories needed for testing
#------------------------------------------------------------------------------------------
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Include ${CPPUNIT_INCLUDES} /usr/local/lib/)

#------------------------------------------------------------------------------------------
# Tell CMake what libs to add to the link
#------------------------------------------------------------------------------------------
LINK_LIBRARIES(cppunit socket)

#------------------------------------------------------------------------------------------
# Tell CMake what subdirectories to recurse into
#------------------------------------------------------------------------------------------
ADD_SUBDIRECTORY(Core)


