#------------------------------------------------------------------------------------------
# Tell CMake what subdirectories to recurse into
#------------------------------------------------------------------------------------------
ADD_SUBDIRECTORY(DataServerInterface)
ADD_SUBDIRECTORY(IcmTerm)
ADD_SUBDIRECTORY(IoPulse)
ADD_SUBDIRECTORY(IpIcmTester)
ADD_SUBDIRECTORY(ModuleDataReader)
ADD_SUBDIRECTORY(ModuleMessageTester)
ADD_SUBDIRECTORY(PlcTerm)
ADD_SUBDIRECTORY(PromptTester)
ADD_SUBDIRECTORY(SendCommand)
ADD_SUBDIRECTORY(SendPrompt)
ADD_SUBDIRECTORY(TestDataExtractor)
ADD_SUBDIRECTORY(TestReportGenerator)
ADD_SUBDIRECTORY(TestResultAnalyzer)
ADD_SUBDIRECTORY(bincat)

