#------------------------------------------------------------------------------------------
# Tell CMake what subdirectories to recurse into
#------------------------------------------------------------------------------------------
ADD_SUBDIRECTORY(TestComponents)
ADD_SUBDIRECTORY(VehicleTest)
