#------------------------------------------------------------------------------------------
# Tell CMake what subdirectories to recurse into
#------------------------------------------------------------------------------------------
ADD_SUBDIRECTORY(ModuleInterfaces)
ADD_SUBDIRECTORY(ProtocolFilters)
ADD_SUBDIRECTORY(TestComponents)
ADD_SUBDIRECTORY(VehicleTest)
