#------------------------------------------------------------------------------------------
# Define the basename of our executable (for us only...not required by CMake)
#------------------------------------------------------------------------------------------
SET(EXE_NAME PromptTester)

#------------------------------------------------------------------------------------------
# Tell CMake what libs to add to the link
#------------------------------------------------------------------------------------------
LINK_LIBRARIES(ncurses)

#------------------------------------------------------------------------------------------
# Tell CMake what source file to build
#------------------------------------------------------------------------------------------
ADD_EXECUTABLE(${EXE_NAME} ${EXE_NAME}.cpp ${EXE_NAME}Main.cpp)

#------------------------------------------------------------------------------------------
# Tell CMake where to install the executable
#------------------------------------------------------------------------------------------
INSTALL_TARGETS(${CORE_TOOLS_INSTALL_DIR} ${EXE_NAME})
