#------------------------------------------------------------------------------------------
# Define the basename of our executable (for us only...not required by CMake)
#------------------------------------------------------------------------------------------
SET(EXE_NAME TestReport)

#------------------------------------------------------------------------------------------
# Tell CMake what libs to add to the link
#------------------------------------------------------------------------------------------

#------------------------------------------------------------------------------------------
# Tell CMake what source file to build
#------------------------------------------------------------------------------------------
ADD_EXECUTABLE(${EXE_NAME} TestReportGenerator.cpp TestReportGeneratorMain.cpp)

#------------------------------------------------------------------------------------------
# Tell CMake where to install the executable
#------------------------------------------------------------------------------------------
INSTALL_TARGETS(${CORE_TOOLS_INSTALL_DIR} ${EXE_NAME})
